[project]
name = "search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai",
]

[tool.maturin]
module-name = "search._core"
python-packages = ["search"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
